# dms-mowilex

./: .env  .env.example  .gitignore  README.md  conftest.py  dmsmowilex.md  not_found_faktur_pajak.txt  pyproject.toml
pages/: faktur_pajak_page.py  login_page.py
tests/: test_faktur_pajak_download_not_match.py  test_faktur_pajak_fix_short_invoice.py  test_faktur_pajak_invoice_len_check.py  test_fill_invoice.py
utils/: check_excel.py  debug_actions.py  diagnose_100.py  diagnose_100_v2.py  diagnose_101_200.py  dump_row.py  file_utils.py  inspect_rows.py  list_short_invoices.py  rearrange_excel.py  verify_fp.py  verify_update.py
